--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,8 +53,8 @@
     <h2>Выберите страницу:</h2>
 
     <div class="button-container">
-        <a href="/Bus" class="button">Таблицы БД</a>
-        <a href="/Waybill" class="button">Запросы</a>
+        <a href="/Bus" class="button">Справочник</a>
+        <a href="/Waybill" class="button">Отчеты</a>
     </div>
 </div>
 
