--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -12,10 +12,10 @@
     <ul class="navigation">
       <li class="navigation-item"><a href="home" class="navigation-link"> &#8592; назад</a></li>
       <li class="navigation-item"><a href="Waybill" class="navigation-link">Путевой лист</a></li>
-      <li class="navigation-item"><a href="requestOne" class="navigation-link">Запрос 1</a></li>
-      <li class="navigation-item"><a href="requestTwo" class="navigation-link">Запрос 2</a></li>
-      <li class="navigation-item"><a href="requestThree" class="navigation-link">Запрос 3</a></li>
-      <li class="navigation-item"><a href="requestFour" class="navigation-link">Запрос 4</a></li>
+      <li class="navigation-item"><a href="requestOne" class="navigation-link">Количество автобусов</a></li>
+      <li class="navigation-item"><a href="requestTwo" class="navigation-link">Автобусы, обслуживающие маршрут</a></li>
+      <li class="navigation-item"><a href="requestThree" class="navigation-link">Количество рейсов</a></li>
+      <li class="navigation-item"><a href="requestFour" class="navigation-link">Количество смен</a></li>
     </ul>
   </nav>
 </header>
