--- a/src/main/resources/templates/requestThree.html
+++ b/src/main/resources/templates/requestThree.html
@@ -12,6 +12,7 @@
 <header>
     <nav th:insert="~{nav::navig}"/>
 </header>
+ <p>Итоги работы за месяц. Количество рейсов, выполненных каждым автобусом или на каждом маршруте.</p>
 <div class="container">
     <form>
         <div class="form-group">
