--- a/src/main/resources/templates/requestTwo.html
+++ b/src/main/resources/templates/requestTwo.html
@@ -11,6 +11,7 @@
 <header>
     <nav th:insert="~{nav::navig}"/>
 </header>
+<p>Информацич об автобусах, обслуживающих маршрут.</p>
 <div class="container">
     <form>
         <div class="form-group">
